Closed Bug 1052239 Opened 11 years ago Closed 11 years ago

MSE main thread assertion when seeking

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: cajbir, Assigned: cajbir)

References

Details

Attachments

(1 file, 1 obsolete file)

When seeking in an MSE video an assertion occurs about calling MediaSource::ActiveSourceBuffers on a non-main thread. This assertion was added in a recent landing. Steps to reproduce: 1) Visit http://cd.pn/mse/ytdemo/dash-player.html?url=http://cd.pn/mse/ytdemo/feelings2.mpd 2) When video plays, seek somewhere Expected result 3) Video seeks Actual result 4) Firefox crashes with assertion
Assignee: nobody → cajbir.bugzilla
Attached patch 1052239.patch (obsolete) — Splinter Review
Iterate through decoders instead of source buffers.
Attachment #8471304 - Flags: review?(kinetik)
Blocks: 1049327
Comment on attachment 8471304 [details] [diff] [review] 1052239.patch Review of attachment 8471304 [details] [diff] [review]: ----------------------------------------------------------------- r+ with comments. Remove SourceBuffer::ContainsTime and SourceBufferList::AllContainsTime since they're no longer used. ::: content/media/mediasource/SubBufferDecoder.cpp @@ +133,5 @@ > + nsresult rv = GetBuffered(ranges); > + if (NS_FAILED(rv) || ranges->Length() == 0) { > + return false; > + } > + for (uint32_t i = 0; i < ranges->Length(); ++i) { Use TimeRanges::Find please.
Attachment #8471304 - Flags: review?(kinetik) → review+
Attached patch FixSplinter Review
Address review comments. Carry r+ forward.
Attachment #8471304 - Attachment is obsolete: true
Attachment #8471318 - Flags: review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
No longer blocks: 1049327
Depends on: 1049327
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: