Bug 1052239 - MSE main thread assertion when seeking - r=kinetik

--HG--
extra : rebase_source : 7127180b4257434d65488f9ca7acbcc77bb77e6c